--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ video {
   flex-direction: column;
   text-align: center;
   border:0;
+  overflow: hidden;
 }
 .page-container.center {
   text-align: center;
