--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta property="og:title" content="Tenzai | Your AI Hacker">
 <meta property="og:description" content="Tenzai agents actively hack, exploit, and fix hardest-to-find vulnerabilities across enterprise software — at the speed of AI" />
-<meta property="og:image" content="https://galshir.com/clients/b760c3560f892523/img/tenzai-og-image.png">
+<meta property="og:image" content="https://tenzai.com/img/tenzai-og-image.png">
 <meta property="og:url" content="https://tenzai.com">
 <meta property="og:type" content="website" />
 
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@tenzai" />
 <meta name="twitter:description" content="Tenzai agents actively hack, exploit, and fix hardest-to-find vulnerabilities across enterprise software — at the speed of AI" />
-<meta name="twitter:image" content="https://galshir.com/clients/b760c3560f892523/img/tenzai-og-image.png">
+<meta name="twitter:image" content="https://tenzai.com/img/tenzai-og-image.png">
 <style>
 * {
   box-sizing: border-box;
@@ -51,7 +51,7 @@ body.inner-page {
 }
 a {
   text-decoration: none;
-  color:#ffffff90;
+  color:white;
 }
 .inner-page a {
   color:#19191A;
@@ -234,7 +234,6 @@ p.big {
 .text-block {
   border:1px solid #88ffff30;
   color:#88ffff;
-  box-sizing: border-box;
   padding:16px 32px;
   border-radius: 8px;
   margin:32px 0;
@@ -400,8 +399,6 @@ input.error, textarea.error {
   gtag('config', 'G-BH9DNMP46L');
 </script>
 
-<div class="cursor-gradient"></div>
-
 <div class="background-dither"></div>
 
 <div class="video-container">
@@ -409,7 +406,7 @@ input.error, textarea.error {
 </div>
 
 <div class="header">
-  <a class="logo" href="#home">
+  <a class="logo" href="/">
     <img class="dark" src="img/tenzai-full-logo-blue-white.svg">
     <img class="light" src="img/tenzai-full-logo-black.svg">
   </a>
@@ -430,7 +427,7 @@ input.error, textarea.error {
 </div>
 
 <div class="page-container" data-page="manifesto">  
-  <label class="blue">MANIFESTO</label>
+  <label style="margin-left:6px">MANIFESTO</label>
   <h1>Hello, world. We're Tenzai.</h1>
   <p class="big">Hackers have always seen the world differently. Where others follow rules, they test them. They find beauty in systems, and truth in their flaws.</p>
 
