--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ input.error, textarea.error {
 </div>
 
 <div class="header">
-  <a class="logo" href="/">
+  <a class="logo" href="#home">
     <img class="dark" src="img/tenzai-full-logo-blue-white.svg">
     <img class="light" src="img/tenzai-full-logo-black.svg">
   </a>
