--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ input.error, textarea.error {
     <li>Request correction or deletion of your data.</li>
     <li>Withdraw consent for certain data uses.</li>
   </ul>
-  <p>To exercise these rights, please contact us at [Insert Email].</p>
+  <p>To exercise these rights, please contact us at team@tenzai.com.</p>
   <h3>7. Third-Party Links</h3>
   <p>Our Site may link to other websites. We are not responsible for the privacy practices or content of those external sites.</p>
   <h3>8. Children's Privacy</h3>
