--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Tenzai | Your AI Hacker</title>
+<title>Tenzai | AI Hacker for Enterprise Security</title>
+<meta name="description" content="Tenzai builds AI hackers that autonomously test, exploit, and fix vulnerabilities across enterprise software—redefining penetration testing for the AI era.">
 <link rel="canonical" href="https://tenzai.com" />
 <link rel="shortcut icon" href="img/tenzai-favicon.svg">
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
@@ -11,16 +12,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-<meta property="og:title" content="Tenzai | Your AI Hacker">
-<meta property="og:description" content="Tenzai agents actively hack, exploit, and fix hardest-to-find vulnerabilities across enterprise software — at the speed of AI" />
+<meta property="og:title" content="Tenzai | The AI Hacker for the Right Side">
+<meta property="og:description" content="Meet the AI Hacker for the right side. Tenzai brings continuous, autonomous penetration testing to modern enterprises -finding and fixing vulnerabilities before attackers do." />
 <meta property="og:image" content="https://tenzai.com/img/tenzai-og-image.png">
 <meta property="og:url" content="https://tenzai.com">
 <meta property="og:type" content="website" />
 
-<meta name="twitter:title" content="Tenzai | Your AI Hacker">
+<meta name="twitter:title" content="Tenzai | The AI Hacker for the Right Side">
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@tenzai" />
-<meta name="twitter:description" content="Tenzai agents actively hack, exploit, and fix hardest-to-find vulnerabilities across enterprise software — at the speed of AI" />
+<meta name="twitter:description" content="Meet the AI Hacker for the right side. Tenzai brings continuous, autonomous penetration testing to modern enterprises -finding and fixing vulnerabilities before attackers do." />
 <meta name="twitter:image" content="https://tenzai.com/img/tenzai-og-image.png">
 <style>
 * {
@@ -225,7 +226,7 @@ h3 {
 p.subtitle {
   font-size: 20px;
   font-weight: 500;
-  max-width:760px;
+  max-width:720px;
   line-height:150%;
 }
 p.big {
@@ -407,8 +408,8 @@ input.error, textarea.error {
 
 <div class="header">
   <a class="logo" href="#home">
-    <img class="dark" src="img/tenzai-full-logo-blue-white.svg">
-    <img class="light" src="img/tenzai-full-logo-black.svg">
+    <img class="dark" src="img/tenzai-full-logo-blue-white.svg" alt="Tenzai | The AI Hacker for the Right Side">
+    <img class="light" src="img/tenzai-full-logo-black.svg" alt="Tenzai | The AI Hacker for the Right Side">
   </a>
   <div class="header-right">
     <a href="#manifesto">Manifesto</a>
@@ -559,9 +560,9 @@ input.error, textarea.error {
   </div>
 
   <div class="footer-right">
-    <a class="button circle" href="https://x.com/tenzai"><img src="img/i-linkedin.png"></a>
+    <a class="button circle" target="_blank" href="https://www.linkedin.com/company/tenzai-inc"><img src="img/i-linkedin.png"></a>
     <span style="margin-left:4px;"></span>
-    <a class="button circle" href="https://x.com/tenzai"><img src="img/i-twitter.png?2"></a>
+    <a class="button circle" target="_blank" href="https://x.com/Tenzai_Labs"><img src="img/i-twitter.png?2"></a>
   </div>
 
 </div>
