--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
   will-change: background-color;
   margin:0;
   width:100vw;
-  height:100vh;
+  height:-webkit-fill-available;
 }
 body.inner-page {
   background-color:#88ffff;
