--- a/index.html
+++ b/index.html
@@ -299,12 +299,15 @@ label {
   backdrop-filter: none;
   transition: all 0.2s ease-out;
 }
+.button.blue:hover {
+  background:#00A8BF;
+}
 .inner-page .button {
   background:#19191A;
   color:white;
 }
 .inner-page .button.blue:hover {
-  background:#19191A;
+  background:#19191ac9;
   color:white;
 }
 .button.circle {
@@ -318,7 +321,7 @@ label {
 input, textarea {
   display: block;
   background:#19191A10;
-  padding:6px 12px;
+  padding:8px 12px;
   border-radius: 6px;
   border:1px solid #19191A40;
   font-size:14px;
