--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@ input, textarea {
   width:300px;
   margin-bottom:16px;
   color:#19191A;
+  font-weight: 500;
 }
 ::placeholder {
   color:#19191A90;
