--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <meta name="twitter:title" content="Tenzai | The AI Hacker for the Right Side">
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@tenzai" />
+<meta name="twitter:site" content="@tenzai_labs" />
 <meta name="twitter:description" content="Meet the AI Hacker for the right side. Tenzai brings continuous, autonomous penetration testing to modern enterprises -finding and fixing vulnerabilities before attackers do." />
 <meta name="twitter:image" content="https://tenzai.com/img/tenzai-og-image.png">
 <style>
@@ -131,7 +131,7 @@ img {
   mix-blend-mode: difference;
 }
 video {
-  height:800px;
+  height:700px;
   max-height: 80vh;
   transition: all 1s ease-in-out;
   animation-name:fadeIn;
@@ -405,7 +405,7 @@ input.error, textarea.error {
 <div class="background-dither"></div>
 
 <div class="video-container">
-  <video autoplay loop muted playsinline src="img/tenzai-star-video.mp4"></video>
+  <video autoplay loop muted playsinline src="img/tenzai-star-video-low.mp4"></video>
 </div>
 
 <div class="header">
