--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>Tenzai | AI Hacker for Enterprise Security</title>
 <meta name="description" content="Tenzai builds AI hackers that autonomously test, exploit, and fix vulnerabilities across enterprise software—redefining penetration testing for the AI era.">
 <link rel="canonical" href="https://tenzai.com" />
-<link rel="shortcut icon" href="img/tenzai-favicon.svg">
+<link rel="shortcut icon" href="img/tenzai-favicon.png">
+<link rel="icon" type="image/x-icon" href="img/tenzai-favicon.png">
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
