--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ input.error, textarea.error {
   </a>
   <div class="header-right">
     <a href="#manifesto">Manifesto</a>
-    <a href="#joinus">Join us</a>
+    <!-- <a href="#joinus">Join us</a> -->
   </div>
 </div>
 
