--- a/index.html
+++ b/index.html
@@ -488,13 +488,23 @@ input.error, textarea.error {
     We're looking for talented individuals to join our team. If you're interested in what we do, please fill out the form below and our team will get back to you.
   </p>
 
-  <div class="form-container" id="hiring-form" style="margin-top:32px;"> 
+
+  <script charset="utf-8" type="text/javascript" src="https://js-eu1.hsforms.net/forms/embed/v2.js"></script>
+  <script>
+    hbspt.forms.create({
+      portalId: "146816207",
+      formId: "63e16906-b069-4544-bdf9-fae2ccf0d067",
+      region: "eu1"
+    });
+  </script>
+
+  <!-- <div class="form-container" id="hiring-form" style="margin-top:32px;"> 
     <input type="text" name="name" data-mandatory="true" placeholder="Your name" maxlength="100">
     <input type="email" name="email" data-mandatory="true" placeholder="Your email address" maxlength="254">
     <input type="text" name="linkedin" placeholder="LinkedIn profile" maxlength="200">
     <textarea name="message" placeholder="Additional information" maxlength="2000"></textarea>
     <div class="button blue" onclick="sendHiringRequest()">Send</div>
-  </div>
+  </div> -->
 </div>
 
 <div class="page-container" data-page="terms">  
