--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ input.error, textarea.error {
   </a>
   <div class="header-right">
     <a href="#manifesto">Manifesto</a>
-    <!-- <a href="#joinus">Join us</a> -->
+    <a href="#joinus">Join us</a>
   </div>
 </div>
 
@@ -498,16 +498,13 @@ input.error, textarea.error {
     We're looking for talented individuals to join our team. If you're interested in what we do, please fill out the form below and our team will get back to you.
   </p>
 
-
-
-
-  <!-- <div class="form-container" id="hiring-form" style="margin-top:32px;"> 
+  <div class="form-container" id="hiring-form" style="margin-top:32px;"> 
     <input type="text" name="name" data-mandatory="true" placeholder="Your name" maxlength="100">
     <input type="email" name="email" data-mandatory="true" placeholder="Your email address" maxlength="254">
     <input type="text" name="linkedin" placeholder="LinkedIn profile" maxlength="200">
     <textarea name="message" placeholder="Additional information" maxlength="2000"></textarea>
     <div class="button blue" onclick="sendHiringRequest()">Send</div>
-  </div> -->
+  </div>
 </div>
 
 <div class="page-container" data-page="terms">  
