--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ input.error, textarea.error {
 
   <div class="line"></div>
 
-  <h2>Apply for access</h2>
+  <h2 id="apply-for-access">Apply for access</h2>
   <p class="subtitle">We're currently in private beta. If you're interested in accessing Tenzai, please fill out the form below and our team will get back to you.</p>
 
   <script charset="utf-8" type="text/javascript" src="https://js-eu1.hsforms.net/forms/embed/v2.js"></script>
@@ -663,7 +663,7 @@ function nav() {
 }
 
 function scrollToForm() {
-  const form = document.getElementById('form');
+  const form = document.getElementById('apply-for-access');
   setTimeout(() => {
     form.scrollIntoView({ behavior: 'smooth' });
   }, 500);
